--- a/templates/dashboard/experience.html
+++ b/templates/dashboard/experience.html
@@ -5,8 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/main.css" />
+      <!------------------- head style ------------------->
+      <link rel="stylesheet" href="/assets/css/solid.min.css" />
+      <link rel="stylesheet" href="/assets/css/fontawesome.min.css" />
+      <link rel="stylesheet" href="/assets/css/bootstrap.min.css" />
+      <link rel="stylesheet" href="/assets/css/style.css" />
+      <!------------------- head style ------------------->
   </head>
   <body>
     <!-- user info -->
@@ -37,81 +41,38 @@
       <!-- user -->
       <div class="col py-4 px-5">
 
-        <h2>User info</h2>
+        <h2>Expericen list</h2>
 
-
-        <!-- user image -->
-        <div class="d-flex text-primary align-items-center">
-          <img
-            class="rounded-circle"
-            style="width: 50px; height: 50px"
-            src="img/1.jpg"
-            alt=""
-            srcset=""
-          />
-
-          <span class="px-2"> Ali </span>
-        </div>
 
         <form action="" class="mt-3">
           <div class="mb-3">
-            <label for="info-name-input" class="form-label"
-              >Name</label
-            >
+            <label for="info-name-input" class="form-label">Languages</label>
             <input
               type="text"
               class="form-control"
               id="info-name-input"
-              placeholder="Your name here :)"
-              value="Naif"
+              placeholder="Your languages here :)"
+              value="English, Arabic"
             />
           </div>
 
           <div class="mb-3">
-            <label for="info-email-input" class="form-label"
-              >Email address</label
-            >
+            <label for="info-email-input" class="form-label"> Hobbies </label>
             <input
               type="email"
               class="form-control"
               id="info-email-input"
-              placeholder="name@example.com"
+              placeholder="ex. talk to other people"
             />
           </div>
 
           <div class="mb-3">
-            <label for="info-location-input" class="form-label"
-              >Location</label
-            >
+            <label for="info-location-input" class="form-label">Ex years</label>
             <input
               type="text"
               class="form-control"
               id="info-location-input"
-              placeholder="next to your house"
-            />
-          </div>
-
-          <div class="mb-3">
-            <label for="info-phone-number-input" class="form-label"
-              >Phone number</label
-            >
-            <input
-              type="number"
-              class="form-control"
-              id="info-phone-number-input"
-              placeholder="967 777 777 777"
-            />
-          </div>
-
-          <div class="mb-3">
-            <label for="info-post-code-input" class="form-label"
-              >Post Code</label
-            >
-            <input
-              type="number"
-              class="form-control"
-              id="info-post-code-input"
-              placeholder="123456"
+              placeholder="ex. 2 years"
             />
           </div>
 
