--- a/templates/dashboard/courses.html
+++ b/templates/dashboard/courses.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/solid.min.css" />
-    <link rel="stylesheet" href="css/fontawesome.min.css" />
-    <link rel="stylesheet" href="css/main.css" />
+      <!------------------- head style ------------------->
+      <link rel="stylesheet" href="/assets/css/solid.min.css" />
+      <link rel="stylesheet" href="/assets/css/fontawesome.min.css" />
+      <link rel="stylesheet" href="/assets/css/bootstrap.min.css" />
+      <link rel="stylesheet" href="/assets/css/style.css" />
+      <!------------------- head style ------------------->
   </head>
   <body>
     <!-- user info -->
