--- a/templates/dashboard/education.html
+++ b/templates/dashboard/education.html
@@ -67,7 +67,7 @@
               <!-- education -->
               <a
                 href="education.html"
-                class="text-secondary d-flex align-items-center d-inline-block ms-3 border-bottom pb-2"
+                class="text-primary d-flex align-items-center d-inline-block ms-3 border-bottom pb-2"
               >
                 <i class="fa fa-book pe-2"></i>
                 <span class="fs-6 fw-bold">Education</span>
@@ -76,7 +76,7 @@
               <!-- Courses -->
               <a
                 href="courses.html"
-                class="text-primary d-flex align-items-center d-inline-block ms-3 border-bottom pb-2"
+                class="text-secondary d-flex align-items-center d-inline-block ms-3 border-bottom pb-2"
               >
                 <i class="fa fa-paperclip pe-2"></i>
                 <span class="fs-6 fw-bold">Courses</span>
@@ -85,43 +85,45 @@
           </div>
         </div>
 
-        <!-- Experience section -->
+        <!-- Education section -->
         <section class="col-lg-8 col-md-8 col-12">
           <div class="card p-3">
-            <header class="card-header bg-transparent">
-              <h3 class="fw-bold text-primary">Courses</h3>
-            </header>
+            <div class="card-header bg-transparent">
+              <h1 class="fs-3 fw-bold text-primary">Education</h1>
+            </div>
 
             <div class="card-body">
-              <div class="row">
-                <!-- experience 1 -->
-                <div class="col-12 mb-5">
-                  <div class="shadow-sm p-3">
-                    <a href="#"> <h4>Front end</h4> </a>
+              <!-- experience 1 -->
+              <div class="col-12 mb-5">
+                <div class="shadow-sm p-3">
+                  <a href="#">
+                    <h4>
+                      <b>Front end</b>
+                      <span class="fs-5">W3school</span>
+                    </h4>
+                  </a>
 
-                    <div class="text-black-50 fs-6 d-flex flex-column">
-                      <span>From 2019 to 2021</span>
-                      <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Itaque, velit!
-                      </p>
-                    </div>
-                  </div>
+                  <a href="#" class="text-black-50 fs-6 d-flex flex-column">
+                    <h6 class="text-black">Youtube</h6>
+                    <span>July 2021</span>
+                  </a>
                 </div>
+              </div>
 
-                <!-- experience 2 -->
-                <div class="col-12 mb-5">
-                  <div class="shadow-sm p-3">
-                    <a href="#"> <h4>Back end</h4> </a>
+              <!--  experience  2-->
+              <div class="col-12 mb-5">
+                <div class="shadow-sm p-3">
+                  <a href="#">
+                    <h4>
+                      <b>Back end</b>
+                      <span class="fs-5">W4school</span>
+                    </h4>
+                  </a>
 
-                    <div class="text-black-50 fs-6 d-flex flex-column">
-                      <span>2021 to 2022</span>
-                      <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Itaque, velit!
-                      </p>
-                    </div>
-                  </div>
+                  <a href="#" class="text-black-50 fs-6 d-flex flex-column">
+                    <h6 class="text-black">Youtube</h6>
+                    <span>March 2022</span>
+                  </a>
                 </div>
               </div>
             </div>
