--- a/templates/profile.html
+++ b/templates/profile.html
@@ -11,14 +11,6 @@
     <link rel="stylesheet" href="../assets/css/bootstrap.min.css" />
     <link rel="stylesheet" href="../assets/css/style.css" />
     <!------------------- head style ------------------->
-
-    <style>
-      .user-avatar {
-        width: 100px;
-        height: 100px;
-        object-fit: cover;
-      }
-    </style>
   </head>
 
   <body>
@@ -372,6 +364,7 @@
                   </div>
                 </div>
               </div>
+
               <!-- Experience section -->
               <div class="col-12 mt-4">
                 <div class="card p-3">
@@ -414,7 +407,7 @@
                       </div>
                     </div>
                   </div>
-                </d>
+                </div>
               </div>
             </div>
           </div>
