--- a/templates/dashboard/education.html
+++ b/templates/dashboard/education.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <!------------------- head style ------------------->
-    <link rel="stylesheet" href="/assets/css/solid.min.css" />
-    <link rel="stylesheet" href="/assets/css/fontawesome.min.css" />
-    <link rel="stylesheet" href="/assets/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="../../assets/css/solid.min.css" />
+    <link rel="stylesheet" href="../../assets/css/fontawesome.min.css" />
+    <link rel="stylesheet" href="../../assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../../assets/css/style.css" />
     <!------------------- head style ------------------->
   </head>
   <body>
