--- a/templates/login.html
+++ b/templates/login.html
@@ -69,7 +69,7 @@
               </li>
             </ul>
 
-            <div class="px-3 d-none d-lg-block">
+            <div class="mt-3 mt-lg-0 px-lg-3">
               <div class="dropdown">
                 <a
                   class="btn dropdown-toggle p-0"
