--- a/templates/dashboard/education.html
+++ b/templates/dashboard/education.html
@@ -132,8 +132,11 @@
       </div>
     </main>
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/popper.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <!------------------- body script ------------------->
+    <script src="../../assets/js/jquery.min.js"></script>
+    <script src="../../assets/js/popper.js"></script>
+    <script src="../../assets/js/bootstrap.min.js"></script>
+    <script src="../../assets/js/script.js"></script>
+    <!------------------- body script ------------------->
   </body>
 </html>
