add logout link in dashboard

--- a/templates/dashboard/user-info.html
+++ b/templates/dashboard/user-info.html
@@ -82,6 +82,15 @@
                 <i class="fa fa-paperclip pe-2"></i>
                 <span class="fs-6 fw-bold">Courses</span>
               </a>
+
+              <!-- log out -->
+              <a
+                href="../../index.html"
+                class="text-secondary d-flex align-items-center d-inline-block ms-3 border-bottom pb-2"
+              >
+                <i class="fa fa-sign-out-alt pe-2"></i>
+                <span class="fs-6 fw-bold">Logout</span>
+              </a>
             </nav>
           </div>
         </div>
