--- a/templates/dashboard/skills.html
+++ b/templates/dashboard/skills.html
@@ -82,6 +82,14 @@
                 <i class="fa fa-paperclip pe-2"></i>
                 <span class="fs-6 fw-bold">Courses</span>
               </a>
+              <!-- log out -->
+              <a
+                href="../../index.html"
+                class="text-secondary d-flex align-items-center d-inline-block ms-3 border-bottom pb-2"
+              >
+                <i class="fa fa-sign-out-alt pe-2"></i>
+                <span class="fs-6 fw-bold">Logout</span>
+              </a>
             </nav>
           </div>
         </div>
@@ -89,7 +97,9 @@
         <!-- info Section -->
         <section class="col-lg-8 col-md-8 col-12">
           <div class="card shadow p-3">
-            <div class="card-header bg-transparent d-flex justify-content-between align-items-center">
+            <div
+              class="card-header bg-transparent d-flex justify-content-between align-items-center"
+            >
               <h3 class="fw-bold text-primary">Skills</h3>
 
               <a
